--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<div id="app">
 		<binomial-calculator></binomial-calculator>	
 	</div>
-	<script type="text/javascript" src="https://unpkg.com/vue@2.5.2/dist/vue.js"></script>
-	<script type="text/javascript" src="arquivos/main.js"></script>
+	<script src="https://unpkg.com/vue@2.5.2/dist/vue.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
+	<script src="arquivos/main.js"></script>
 </body>
 </html>
