Adicionando uns seo maneiro

--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Hello World</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css">
+    <title>Binomial Distribution Calculator | DataFront</title>
+    <meta name="description" content="Fast and reactive with probability mass function graph. Probability the best Binomial Distribution Calculator that you have ever seen.">
+    <meta property="og:title" content="Binomial Distribution Calculator | DataFront" />
+    <meta property="og:description" content="Fast and reactive with probability mass function graph. Probability the best Binomial Distribution Calculator that you have
+	ever seen." />
+    <meta property="og:image" content="/arquivos/Binomial-calculator.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:url" content="https://matheusr42.github.io/DataFront/Binomial-Distribution-Calculator" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        document.location = '/Binomial-Distribution-Calculator'
+    </script>
 </head>
+
 <body>
-	<div id="app">
-		<binomial-calculator></binomial-calculator>	
-	</div>
-	<script src="https://unpkg.com/vue@2.5.2/dist/vue.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
-	<script src="arquivos/main.js"></script>
 </body>
+
 </html>
