--- a/Binomial-Distribution-Calculator/index.html
+++ b/Binomial-Distribution-Calculator/index.html
@@ -25,6 +25,6 @@
 	</div>
 	<script src="https://unpkg.com/vue@2.5.2/dist/vue.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
-	<script src="arquivos/main.js"></script>
+	<script src="../arquivos/main.js"></script>
 </body>
 </html>
