update image url

--- a/Binomial-Distribution-Calculator/index.html
+++ b/Binomial-Distribution-Calculator/index.html
@@ -6,7 +6,7 @@
 	<meta property="og:title" content="Binomial Distribution Calculator | DataFront" />
 	<meta property="og:description" content="Fast and reactive with probability mass function graph. Probability the best Binomial Distribution Calculator that you have
 	ever seen."/>
-	<meta property="og:image" content="/arquivos/Binomial-calculator.png"/>
+	<meta property="og:image" content="../arquivos/Binomial-calculator.png"/>
 	<meta property="og:image:type" content="image/png" />
 	<meta property="og:url" content="https://matheusr42.github.io/DataFront/Binomial-Distribution-Calculator" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
