--- a/Binomial-Distribution-Calculator/index.html
+++ b/Binomial-Distribution-Calculator/index.html
@@ -17,7 +17,7 @@
 		<section class="section">
 			<h1 class="title">Binomial Distribution Calculator</h1>
 			<p class="subtitle">
-				A tool to calcule
+				A tool to calculate
 				<strong>Binomial Probabilities</strong>!
 			</p>
 		</section>
